objects/Action__c.object
<CustomObject>
    <fields>
        <fullName>Action_Current_Status__c</fullName>
        <inlineHelpText>Date autogenerated.  Overwrite all upon edit.</inlineHelpText>
        <label>Action Current Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Prior_Status__c</fullName>
        <description>Status before latest update</description>
        <inlineHelpText>Read Only.  Autocaptures  Action Current Status when that is overwritten.</inlineHelpText>
        <label>Action Prior Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_Status_Before_Prior__c</fullName>
        <label>Action Status Before Prior</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Committee</label>
        <referenceTo>Committee__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <label>% Completion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_status__c</fullName>
        <formula>IF( ISPICKVAL( Completion__c , &apos;100%&apos;) , 
IMAGE(&quot;/servlet/servlet.FileDownload?file=1524000003DDcG&quot;, &quot;100%&quot;, 16, 16), 
IF(ISPICKVAL( Completion__c , &apos;75%&apos;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000003D5tV&quot;, &quot;75%&quot;, 16, 16) , 
IF(ISPICKVAL( Completion__c , &apos;50%&apos;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000003DDcF&quot;, &quot;50%&quot;,16,16) ,
IF(ISPICKVAL( Completion__c , &apos;25%&apos;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000003DDcE&quot;, &quot;25%&quot;, 16, 16) ,null
)
)
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Point</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>IF(ISPICKVAL(Status__c , &apos;Completed&apos;), true, false)</formula>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOverdue__c</fullName>
        <formula>AND(NOT(IsClosed__c), Due_Date__c &lt; TODAY())</formula>
        <label>IsOverdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipName>Collaboration_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>IF(IsClosed__c,
  IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3Ew&quot;, &quot;Green&quot;, 16, 16),
  IF(Due_Date__c &gt;= TODAY(), 
    IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3Ey&quot;, &quot;Yellow&quot;, 16, 16) , 
    IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3Ex&quot;, &quot;Red&quot;, 16, 16) 
  ) 
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <color>#FFCC33</color>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#33CC00</color>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Initiative_Action</fullName>
        <active>true</active>
        <label>Initiative Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_Action</fullName>
        <active>true</active>
        <label>Meeting Action</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Action_Assignment__c</fullName>
        <label>Action Assignment</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Action_Follower__c</fullName>
        <label>Action Follower</label>
    </sharingReasons>
    <validationRules>
        <fullName>Section_or_Initiative_Required</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Initiative_Action&apos; &amp;&amp; ISBLANK(Section__c) &amp;&amp; ISBLANK(Initiative__c)</errorConditionFormula>
        <errorMessage>Section or Initiative is required.</errorMessage>
    </validationRules>
</CustomObject>